<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arthur.login.Contenido">



    <item
        android:id="@+id/action_listening"
        android:orderInCategory="5"
        android:title="@string/action_escuchar"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_listening"/>


    <item
        android:id="@+id/action_upload"
        android:orderInCategory="10"
        android:title="@string/action_upload"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_upload"
    />


    <item
        android:id="@+id/action_marcador"
        android:orderInCategory="20"
        android:title="@string/action_read"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_read"/>


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
