<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <Button
        android:id="@+id/btn_Google"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/btn_redondo_pink"
        android:drawableStart="@drawable/ic_google_white"
        android:drawableLeft="@drawable/ic_google_white"
        android:onClick="btnGoogle"
        android:paddingStart="50dp"
        android:paddingLeft="50dp"
        android:paddingEnd="45dp"
        android:paddingRight="45dp"
        android:text="@string/btn_Google"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_OR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/lbl_OR"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Google" />

    <ImageView
        android:id="@+id/imv_IconUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="imgButton"
        android:contentDescription="@string/btn_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_OR"
        app:srcCompat="@drawable/ic_user" />

            <LinearLayout
                android:id="@+id/lnr_CamposDatos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imv_IconUser">

                <LinearLayout
                    android:id="@+id/lnr_tvNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_FirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_FisrtName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_LastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_LastName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnr_etNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_FirstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/txt_FirstName"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/et_LastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/txt_LastName"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_Email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/txt_email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/tv_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_Password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/txt_Create_Password"
                    android:inputType="textPassword" />

            </LinearLayout>

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/botones"
        android:onClick="btnSignUp"
        android:text="@string/btn_SignUp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>