<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cst_Contenido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_OR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_OR"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Firefox" />

    <Button
        android:id="@+id/btn_Firefox"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/btn_redondo"
        android:drawableStart="@drawable/ic_firefox"
        android:drawableLeft="@drawable/ic_firefox"
        android:fontFamily="sans-serif-medium"
        android:onClick="btnFirefox"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingEnd="60dp"
        android:paddingRight="60dp"
        android:text="@string/btn_Firefox"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Google" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:onClick="login"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingEnd="60dp"
        android:paddingRight="60dp"
        android:text="@string/btn_LogIn"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Google"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/btn_redondo"
        android:drawableStart="@drawable/ic_google"
        android:drawableLeft="@drawable/ic_google"
        android:fontFamily="sans-serif-medium"
        android:onClick="btnGoogle"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/btn_Google"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_OR">

        <TextView
            android:id="@+id/tv_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/lbl_Email"
            android:textColor="@android:color/primary_text_light_nodisable"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="auto"
            android:fontFamily="sans-serif"
            android:hint="@string/txt_Email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_Password"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/lbl_Password"
            android:textColor="@android:color/primary_text_light_nodisable"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/txt_Enter_Password"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_ForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autoLink="web"
        android:onClick="forgotPassword"
        android:gravity="center"
        android:text="@string/lbl_ForgotPassword"
        android:textColor="@color/link"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tv_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:onClick="goToSignUp"
        android:text="@string/lbl_SignUp"
        android:textAllCaps="false"
        android:textColor="@color/link"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/no_account"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ForgotPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>